# advent-of-code

2018/advent-2018-kotlin/: settings.gradle
2018/advent-2018-kotlin/src/main/kotlin/: Day2.kt  Day3.kt  FileReader.kt  Inputs.kt
2018/advent-2018-kotlin/src/test/kotlin/: Day2KtTest.kt  Day3KtTest.kt  (+1 more)
2021/: jest.config.js  package-lock.json  package.json
2021/files/: test.txt
2021/src/: Day.ts  advent.spec.ts  day1.spec.ts  day1.ts  helpers.ts  main.ts  read.ts
2021/src/day1/: day1.spec.ts  day1.ts
2021/src/day2/: day2.spec.ts  day2.ts
2021/src/day3/: day3.spec.ts  day3.ts
2021/src/day4/: day4.spec.ts  day4.ts
2021/src/day5/: day5.spec.ts  day5.ts
2021/src/day6/: day6.spec.ts  day6.ts
2021/src/day7/: day7.spec.ts  day7.ts
2021/src/day8/: day8.spec.ts  day8.ts
2021/src/day9/: day9.spec.ts  day9.ts
2021/src/fileReader/: fileReader.spec.ts  fileReader.ts
CSharp-2017/: CSharp-2017.sln
CSharp-2017/CSharp-2017/: AdventOfCode.cs  CSharp-2017.csproj  Parser.cs  Program.cs  PuzzleInputs.cs  Question1.cs  UnitTest1.cs
CSharp-2017/CSharp-2017/Solutions/: Question1.cs  Question1Test.cs  Question2.cs  Question2Test.cs  Question3.cs  Question3Test.cs  Spreadsheet.cs  SpreadsheetTest.cs
CSharp-2017/CSharp-2017/Support/: IntListParser.cs  IntListParserTest.cs  ParserTest.cs
cpp-2021/: .gitignore  BUILD  WORKSPACE  aoc.cpp  aoc.h  bazel-cpp-tutorial
cpp-2021/.clwb/: .bazelproject
cpp-2021/day1/: day1.cpp  day1.h  day1_test.cpp
cpp-2021/input/: BUILD.bazel  input.cpp
cpp-2021/parsing/: BUILD.bazel  parsing.cpp  parsing.h  parsing_test.cpp
cpp-2022/: .bazelproject  .gitignore  BUILD  WORKSPACE  aoc.cpp  bazel-cpp-2022  main.cpp
cpp-2022/Day7/: BUILD.bazel  Day7.cpp  Day7.h  Day7_test.cpp
cpp-2022/Day8/: BUILD.bazel  Day8.cpp  Day8.h  Day8_test.cpp
cpp-2022/Day9/: BUILD.bazel  Day9.cpp  Day9.h  Day9_test.cpp
cpp-2022/day1/: BUILD.bazel  day1.cpp  day1.h  day1_test.cpp
cpp-2022/day2/: BUILD.bazel  day2.cpp  day2.h  day2_test.cpp
cpp-2022/day3/: BUILD.bazel  Day3.cpp  Day3.h  Day3_test.cpp
cpp-2022/day4/: BUILD.bazel  Day4.cpp  Day4.h  Day4_test.cpp
cpp-2022/day5/: BUILD.bazel  Day5.cpp  Day5.h  Day5_test.cpp
cpp-2022/day6/: BUILD.bazel  Day6.cpp  Day6.h  Day6_test.cpp
cpp-2022/input/: input.cpp  input.h
cpp-2022/parsing/: BUILD.bazel  parsing.cpp  parsing.h  parsing_test.cpp
cpp-2022/questions/: Day 10 - Advent of Code 2022.html  Day 9 - Advent of Code 2022.html
haskell-2019/take2/: .gitignore  ChangeLog.md  package.yaml
haskell-2019/take2/app/: Main.hs
haskell-2019/take2/src/: Intcode.hs  Lib.hs  Problem1.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs
haskell-2019/take2/test/: Assertions.hs  IntcodeSpec.hs  Problem1Spec.hs  Problem2Spec.hs  Problem3Spec.hs  Problem4Spec.hs  Problem5Spec.hs  Problem6Spec.hs  Problem7Spec.hs  Spec.hs
haskell/take2/app/: Main.hs
kotlin/: settings.gradle
kotlin-2018/: build.gradle  settings.gradle
kotlin-2023/: build.gradle.kts  settings.gradle.kts
kotlin-2023/src/main/kotlin/: Main.kt
kotlin-2023/src/main/resources/: 3.html  4.html
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/test/kotlin/: Day3KtTest.kt  FileReaderTest.kt
swift-2019/: Package.swift  README.md
swift-2019/Sources/swift-2019/: Day.swift  Day3.swift  Extensions.swift  IntcodeProgram.swift  Wires.swift  day1.swift  day2.swift  inputs.swift  swift_2019.swift
swift-2019/Tests/: LinuxMain.swift
swift-2019/Tests/swift-2019Tests/: XCTestManifests.swift  day1Tests.swift  intcodeTests.swift  mainTests.swift  swift_2019Tests.swift  wireTests.swift
swift-2020/: Package.swift  README.md
swift-2020/Sources/swift-2020/: BagMap.swift  BoardingPass.swift  CustomsForm.swift  Day1.swift  Day2.swift  Day3.swift  Day4.swift  Day6.swift  Day7.swift  Day8.swift  GameSoftware.swift  JoltageReader.swift  PassportValidator.swift  Result+Extensions.swift  SeatMap.swift  TobogganMap.swift  XMASReader.swift  inputs.swift  swift_2020.swift
swift-2020/Sources/swift-2020-cli/: main.swift
swift-2020/Sources/swift-2020/Days/: Day.swift  Day1.swift  Day10.swift  Day11.swift  Day3.swift  Day4.swift  Day5.swift  Day8.swift  Day9.swift
swift-2020/Sources/swift-2020/Reader/: TextFileReader.swift
swift-2020/Tests/: LinuxMain.swift
swift-2020/Tests/swift-2020Tests/: Assertions.swift  BagMapTests.swift  BoardingPassTests.swift  CustomsFormTest.swift  Day1Tests.swift  Day4Tests.swift  GameSoftwareTests.swift  JoltageReaderTests.swift  PassportTests.swift  PasswordTests.swift  SeatMapTests.swift  TobogganMapTest.swift  XCTestManifests.swift  XMASReaderTests.swift  swift_2020Tests.swift
swift-2020/Tests/swift-2020Tests/Reader/: TextFileReaderTests.swift
swift-2020/swift-2020.xcodeproj/: project.pbxproj
swift-2020/swift-2020.xcodeproj/xcshareddata/xcschemes/: swift-2020-Package.xcscheme
(+48 files in other folders)
