load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "day2",
    srcs = ["day2.cpp"],
    hdrs = ["day2.h"],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "day2_test",
    srcs = ["day2_test.cpp"],
    deps = [":day2",
            "//parsing",
            "//input",
            "@com_google_googletest//:gtest_main"
            ],
)