load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "Day4",
    srcs = ["Day4.cpp"],
    hdrs = ["Day4.h"],
    visibility = ["//visibility:public"],
    deps = [    "@com_google_absl//absl/strings"
]
)

cc_test(
    name = "Day4_test",
    srcs = ["Day4_test.cpp"],
    deps = [":Day4",
            "//parsing",
            "//input",
            "@com_google_googletest//:gtest_main"
        ],
)